<resources>
    <string name="app_name">PR14_Aubov_PR-21.102</string>
    <string name="welcome"><b><i>Добро пожаловать!</i></b></string>
    <string name="enter_login"><i>Введите логин</i></string>
    <string name="enter_password"><i>Введите пароль</i></string>
    <string name="reg"><i>Регистрация</i></string>
    <string name="accept"><i>Я согласен с условиями лицензионного соглашения</i></string>
    <string name="timer"><i><b>Секундомер</b></i>\n00:00</string>
    <string name="exercise"><i><b>Планка</b></i></string>
    <string name="mass"><b><i>Вес</i></b></string>
    <string name="regul"><b><i>Регулярность</i></b></string>
    <string name="cal"><b><i>Калории</i></b></string>
    <string name="masstext">59 кг</string>
    <string name="regultext">Каждый день</string>
    <string name="caltext">Вы потратили:\n10 калорий \n\nВы получили:\n20 калорий\n\nВам нужно\nпотратить:\n10 калорий</string>
</resources>