<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="403dp"
        android:layout_height="117dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        android:textColor="@color/text_dark_blue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/enter_login"
        android:textColor="@color/text_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/enter_password"
        android:textColor="@color/text_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="290dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:background="@color/bg_ocher"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/text_grey"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="287dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/bg_ocher"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="@color/text_grey"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="292dp"
        android:layout_height="65dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/bg_ocher"
        android:text="@string/reg"
        android:textColor="@color/text_blue"
        android:textSize="24dp"
        android:onClick="GoToMenu"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="273dp"
        android:layout_height="58dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/accept"
        android:paddingLeft="30dp"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="62dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/bg_ocher"
        android:scaleType="centerCrop"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>