<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="30dp"
                android:background="@color/text_grey"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:translationZ="5dp"/>

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="62dp"
                android:layout_height="35dp"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="300dp"
                android:backgroundTint="@color/bg_ocher"
                android:scaleType="centerCrop"
                android:src="@drawable/menu"
                android:elevation="5dp"
                android:stateListAnimator="@null"
                android:translationZ="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableLeft="@drawable/free_icon_kettlebell_4425122"
                android:text="@string/mass"
                android:textColor="@color/text_blue"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/masstext"
                android:textColor="@color/text_blue"
                android:textSize="35dp"/>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="30dp"
                android:background="@color/text_blue"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                android:elevation="5dp"
                android:stateListAnimator="@null"
                android:translationZ="3dp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableLeft="@drawable/free_icon_timer_142641"
                android:text="@string/regul"
                android:textColor="@color/text_blue"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/regultext"
                android:textColor="@color/text_blue"
                android:textSize="35dp"/>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="30dp"
                android:background="@color/text_blue"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                android:elevation="5dp"
                android:stateListAnimator="@null"
                android:translationZ="3dp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableLeft="@drawable/free_icon_no_fast_food_3296858"
                android:text="@string/cal"
                android:textColor="@color/text_blue"
                android:textSize="35dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/caltext"
                android:textColor="@color/text_blue"
                android:textSize="35dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>